<resources>
    <string name="app_name">Таблица умножения для детей</string>
    <string name="zagalovok">zagalovok</string>
    <string name="imageButton1">imageButton1</string>
    <string name="imageButton2">imageButton2</string>
    <string name="imageButton3">imageButton3</string>
    <string name="imageButton4">imageButton4</string>
    <string name="imageButton5">imageButton5</string>
    <string name="imageButton6">imageButton6</string>
    <string name="imageButton7">imageButton7</string>
    <string name="imageButton8">imageButton8</string>
    <string name="imageButton9">imageButton9</string>
    <string name="imageButton10">imageButton10</string>
    <string name="boys">boys</string>
    <string name="girl">girl</string>
    <string name="question">Реши пример:</string>
    <string name="answer"> "?" </string>
    <string name="answerButton">ответить</string>
    <string name="test_image">Картинка на экране с примерами</string>
    <string name="primer"> 9 * 5 =</string>
    <string name="buttonTable">buttonTable</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>